Fix search form overflow
Search input in the navbar overflowed
to the next line in the navbar in
certain pages.

--- a/docs/_static/my-styles.css
+++ b/docs/_static/my-styles.css
@@ -18,3 +18,11 @@ body{
 .navbar-text{
 	color: #676767;
 }
+
+.navbar-form.navbar-right{
+	padding: 0;
+}
+
+.navbar-form .form-control{
+	width: 150px;
+}
